--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
     <li><%= msg %></li>
   </ul>
   <% end %>
-  <%= yield %>
-
+  <%= render 'layouts/navigation' %>
+  <div class ='container'>
+    <%= yield %>
+  </div>
   </body>
   </html>
