--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,17 +1,25 @@
-<%= form_for @article do |f|%>
+<%= render 'shared/errors', obj: @article %>
+<%= form_for(@article, :html => {class: "form-horizontal", role: "form"})  do |f|%>
+<div class="form-group">
+  <div class="col-sm-2 control-label"><%= f.label :title %></div>
+  <div class="col-sm-8">
+    <%= f.text_field :title ,class: "form-control" ,id: "inputEmail3", placeholder: "Title of blog",autofocus: true%>
+  </div>
+</div>
 
-    <p>
-      <%= f.label :title %>
-      <%= f.text_field :title %>
-    </p>
+<div class="form-group">
+  <div class="col-sm-2 control-label"><%= f.label :description %>
+</div>
+  <div class="col-sm-8">
+    <%= f.text_area :description ,rows: 10,class: "form-control" ,id: "inputEmail3", placeholder: "Description of blog"%>
+  </div>
+</div>
+<div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit class: "btn btn-primary btn-lg" %>
+    </div>
+  </div>
 
-    <p>
-        <%= f.label :description %>
-        <%= f.text_area :description %>
-    </p>
 
-    <p>
-        <%= f.submit %>
-    </p>
 
 <% end %>
